[gd_scene load_steps=16 format=3 uid="uid://dakr24wpdql6g"]

[ext_resource type="Script" path="res://Bird.gd" id="1_lqbem"]
[ext_resource type="Texture2D" uid="uid://b5m33s0urtkn3" path="res://Flappy Bird Assets/Player/bird2.png" id="1_sgx8p"]
[ext_resource type="Texture2D" uid="uid://qbjgmthuxx7s" path="res://Flappy Bird Assets/Background/Background2.png" id="3_0xj4c"]
[ext_resource type="Script" path="res://ParallaxBackground.gd" id="3_2ngdd"]
[ext_resource type="Texture2D" uid="uid://dpvhi7xmp342r" path="res://Flappy Bird Assets/Tileset/Style 1/TileStyle1.png" id="5_layx0"]
[ext_resource type="Script" path="res://PointsTracker.gd" id="6_slk12"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6lhwt"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5ajw1"]
atlas = ExtResource("1_sgx8p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1d8b"]
atlas = ExtResource("1_sgx8p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_14m2j"]
atlas = ExtResource("1_sgx8p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg68t"]
atlas = ExtResource("1_sgx8p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ue1lb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ajw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1d8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14m2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg68t")
}],
"loop": false,
"name": &"Fly",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8arbf"]
radius = 11.0454

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ns4co"]
texture = ExtResource("5_layx0")
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
16:1/0 = 0
16:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:1/0/physics_layer_0/angular_velocity = 0.0
17:1/0 = 0
17:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:1/0/physics_layer_0/angular_velocity = 0.0
18:1/0 = 0
18:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:1/0/physics_layer_0/angular_velocity = 0.0
19:1/0 = 0
19:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:1/0/physics_layer_0/angular_velocity = 0.0
20:1/0 = 0
20:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:1/0/physics_layer_0/angular_velocity = 0.0
21:1/0 = 0
21:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:1/0/physics_layer_0/angular_velocity = 0.0
22:1/0 = 0
22:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
16:2/0 = 0
16:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:2/0/physics_layer_0/angular_velocity = 0.0
17:2/0 = 0
17:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:2/0/physics_layer_0/angular_velocity = 0.0
18:2/0 = 0
18:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:2/0/physics_layer_0/angular_velocity = 0.0
19:2/0 = 0
19:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:2/0/physics_layer_0/angular_velocity = 0.0
20:2/0 = 0
20:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:2/0/physics_layer_0/angular_velocity = 0.0
21:2/0 = 0
21:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:2/0/physics_layer_0/angular_velocity = 0.0
22:2/0 = 0
22:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
14:3/0 = 0
14:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:3/0/physics_layer_0/angular_velocity = 0.0
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
16:3/0 = 0
16:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:3/0/physics_layer_0/angular_velocity = 0.0
17:3/0 = 0
17:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:3/0/physics_layer_0/angular_velocity = 0.0
18:3/0 = 0
18:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:3/0/physics_layer_0/angular_velocity = 0.0
19:3/0 = 0
19:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:3/0/physics_layer_0/angular_velocity = 0.0
20:3/0 = 0
20:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:3/0/physics_layer_0/angular_velocity = 0.0
21:3/0 = 0
21:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:3/0/physics_layer_0/angular_velocity = 0.0
22:3/0 = 0
22:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:3/0/physics_layer_0/angular_velocity = 0.0
23:3/0 = 0
23:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:3/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
16:4/0 = 0
16:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
18:4/0 = 0
18:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:4/0/physics_layer_0/angular_velocity = 0.0
19:4/0 = 0
19:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:4/0/physics_layer_0/angular_velocity = 0.0
20:4/0 = 0
20:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:4/0/physics_layer_0/angular_velocity = 0.0
21:4/0 = 0
21:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:4/0/physics_layer_0/angular_velocity = 0.0
22:4/0 = 0
22:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:4/0/physics_layer_0/angular_velocity = 0.0
23:4/0 = 0
23:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0 = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
15:5/0 = 0
15:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:5/0/physics_layer_0/angular_velocity = 0.0
16:5/0 = 0
16:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:5/0/physics_layer_0/angular_velocity = 0.0
17:5/0 = 0
17:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:5/0/physics_layer_0/angular_velocity = 0.0
18:5/0 = 0
18:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:5/0/physics_layer_0/angular_velocity = 0.0
19:5/0 = 0
19:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:5/0/physics_layer_0/angular_velocity = 0.0
20:5/0 = 0
20:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:5/0/physics_layer_0/angular_velocity = 0.0
21:5/0 = 0
21:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_5ken4"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ns4co")

[node name="World" type="Node2D"]

[node name="Bird" type="RigidBody2D" parent="."]
position = Vector2(87, 43)
script = ExtResource("1_lqbem")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_6lhwt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Bird"]
sprite_frames = SubResource("SpriteFrames_ue1lb")
animation = &"Fly"

[node name="Area2D" type="Area2D" parent="Bird"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird/Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_8arbf")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("3_2ngdd")
scrollSpeed = 50

[node name="Background2" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(152, 192)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_0xj4c")

[node name="Floor" type="TileMap" parent="ParallaxBackground"]
z_as_relative = false
tile_set = SubResource("TileSet_5ken4")
collision_animatable = true
format = 2
layer_0/tile_data = PackedInt32Array(1441792, 131072, 2, 1507328, 131072, 2, 1441793, 131072, 2, 1507329, 131072, 2, 1441794, 131072, 2, 1507330, 131072, 2, 1441795, 131072, 2, 1507331, 131072, 2, 1441796, 131072, 2, 1507332, 131072, 2, 1441797, 131072, 2, 1507333, 131072, 2, 1441798, 131072, 2, 1507334, 131072, 2, 1441799, 131072, 2, 1507335, 131072, 2, 1441800, 131072, 2, 1507336, 131072, 2, 1441801, 131072, 2, 1507337, 131072, 2, 1441802, 131072, 2, 1507338, 131072, 2, 1441803, 131072, 2, 1507339, 131072, 2, 1441804, 131072, 2, 1507340, 131072, 2, 1441805, 131072, 2, 1507341, 131072, 2, 1376256, 131072, 1, 1376257, 131072, 1, 1376258, 131072, 1, 1376259, 131072, 1, 1376260, 131072, 1, 1376261, 131072, 1, 1376262, 131072, 1, 1376263, 131072, 1, 1376264, 131072, 1, 1376265, 131072, 1, 1376266, 131072, 1, 1376267, 131072, 1, 1376268, 131072, 1, 1376269, 131072, 1)

[node name="Timer" type="Timer" parent="ParallaxBackground"]
wait_time = 2.0
autostart = true

[node name="PointsTracker" type="Label" parent="ParallaxBackground/Timer"]
offset_right = 40.0
offset_bottom = 23.0
text = "hi"
script = ExtResource("6_slk12")

[node name="btnExit" type="Button" parent="."]
offset_left = 72.0
offset_top = 187.0
offset_right = 160.0
offset_bottom = 216.0

[node name="lblExit" type="Label" parent="btnExit"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 29.0
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="btnNewGame" type="Button" parent="."]
offset_left = 72.0
offset_top = 150.0
offset_right = 160.0
offset_bottom = 176.0

[node name="lblNewGame" type="Label" parent="btnNewGame"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 26.0
text = "New Game"
horizontal_alignment = 1

[connection signal="body_entered" from="Bird/Area2D" to="Bird" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ParallaxBackground/Timer" to="ParallaxBackground" method="_on_timer_timeout"]
[connection signal="pressed" from="btnExit" to="ParallaxBackground" method="_on_btn_exit_pressed"]
[connection signal="gui_input" from="btnExit/lblExit" to="ParallaxBackground" method="_on_exit_gui_input"]
[connection signal="pressed" from="btnNewGame" to="ParallaxBackground" method="_on_btn_new_game_pressed"]
